<resources>
    <string name="app_name">HeyTeacher</string>

    <!-- For the main activity -->
    <string name="heyTeacherTitle">Hey Teacher!</string>
    <string name="createClass">Create New Class</string>
    <string name="joinClass">Join Class</string>
    <string name="goToAbout">About Us</string>

    <!-- For the Help activity -->
    <string name="aboutTitle">About</string>
    <string name="studentHelp">In this app you
        first click on join class. That will take you to a
        new screen that you can click on if you do not understand
        the topic.</string>
    <string name="teacherHelp">You can click on \"create a class\"
        to set up a new class, where you can give it a
        name, amount of students, number of students you want to
        have report before being notified, and the timeout for
        students to submit a new request for clarification.  You
        will receive a new id, which the students can use to
        connect to the class.</string>
    <string name="devsTitle">Developers</string>
    <string name="devs">Nick Caputo, Scott Davis, Kelsey Self,
        Jeffrey Prior, and Danya Tazyeen</string>
    <string name="studentLabel">Students</string>
    <string name="teacherLabel">Teacher</string>
    <string name="versionTitle">Version Information</string>
    <string name="version">1.1</string>

    <!-- For the teacher view class -->
    <string name="teacherTitle">Teacher View</string>
    <string name="logout">Log Out</string>
    <string name="initializedNumberCount">-1</string>
    <string name="classId">Class ID:</string>
    <string name="endClass">End</string>
    <string name="resetIDUs">Reset</string>
    <string name="studentsNotifyTitle">Students message</string>
    <string name="studentsNotifyContent">The specified portion of students do not understand
        the topic.</string>
    <string name="currentIDUsTitle">Confused\nstudents:</string>

    <!-- For the UnderstandButtons activity -->
    <string name="studentTitle">Student View</string>
    <string name="countdownTitle">You can press the button to start</string>
    <string name="countdownRepeat">You can press again</string>
    <string name="understand">I Understand!</string>
    <string name="notUnderstand">I Do Not Understand!</string>
    <string name="classIdEnter">Enter the Class ID here</string>
    <string name="connectToClass">Connect to classroom</string>
    <string name="connectedToClass">Connected!</string>
    <string name="pressAgain">Press again</string>

    <!-- For the settings activity -->
    <string name="settingsTitle">Class Setup</string>
    <string name="enterClassName">Enter Class Name</string>
    <string name="enterNumStudents">Enter Number of Students</string>
    <string name="enterWarningThreshold">Enter Warning Threshold</string>
    <string name="secondsToSubmitRequest">Enter button timeout</string>
    <string name="startClass">Start Class</string>

</resources>
