<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/understandButtonsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/office2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.UnderstandButtons">

    <TextView
        android:id="@+id/className"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dip"
        android:text="@string/classIdEnter"
        android:textSize="25sp" />

    <Button
        android:id="@+id/NotUnderstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/red"
        android:padding="10dip"
        android:text="@string/notUnderstand"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/logOut"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/mCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NotUnderstand"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/countdownTitle"
        android:textColor="#000000"
        android:textSize="22sp" />
</RelativeLayout>
