<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3a3a3a"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/classNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/className"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/enterClassName"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="@dimen/settings_font_size_sm" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/numStudentsLayout"
            android:layout_below="@id/classNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/numStudents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/enterNumStudents"
                android:inputType="number"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="@dimen/settings_font_size_sm" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/thresholdLayout"
            android:layout_below="@id/numStudentsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/warningPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterWarningThreshold"
                android:inputType="number"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="@dimen/settings_font_size_sm" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/msLayout"
            android:layout_below="@id/thresholdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="40dip">

            <EditText
                android:id="@+id/msTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/secondsToSubmitRequest"
                android:inputType="number"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="@dimen/settings_font_size_sm" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/startClassButton"
            android:layout_below="@id/msLayout"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/startClass"
            android:textSize="30sp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>